# mediaforge

./: .gitattributes  .gitignore  .tokeignore  Aptfile  CODE_OF_CONDUCT.md  Dockerfile  Pipfile  Procfile  README.md  attributions.txt  autotune.py  banner.psd  blank.html  cap.txt  caption.html  captionfunctions.py  chromiumrender.py  clogs.py  cog_botevents.py  cog_botlist.py  cog_caption.py  cog_commandchecks.py  cog_conversion.py  cog_debug.py  cog_errorhandler.py  cog_guild_bans.py  cog_image.py  cog_media.py  cog_other.py  cog_slashscript.py  cog_status.py  cog_v2test.py  commands_caption.py  commands_conversion.py  commands_debug.py  commands_image.py  commands_media.py  commands_other.py  config.example.py  database.py  (+40 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  feature_request.md  feature_request.yaml  hosting_issue.yaml  other-issue.md  other_issue.md  other_issue.yaml  unban-request.md  unban_request.yaml  unban_request_server.yaml
captionhtml/: 1984.html  breakingnews.html  dontweet.html  eminem.html  eminemcap.html  epicbirthdaytext.html  esmcaption.html  givemeyourphone.html  imagesay.html  imagesaycap.html  imagesaycapleft.html  meme.html  motivate.html  mycaption.html  mycaptionbottom.html  petergriffincap.html  roundcorners.html  slashscript.html  snapchat.html  stuff.html  stuffstretch.html  tenorcap.html  twittercaption.html  twittercaptiondark.html  whisper.html  yskysn.html  zamn.html
docker/: buildffmpeg.sh  buildvips.sh  dockerentry.sh  installimagemagick.sh
emojis/: emoji.psd
imgkit/: config.py  imgkit.py
media/: attributions.txt  braillebanner.txt  emoji.psd  logo.psd  topgg.md
media/active/: attributions.txt
rendering/: common.css  common.js  lottietest.json  positiondiv.html  warmup.html
rendering/twemoji/: twemoji.js
sam/: sam
src/: database.py  heartbeat.py  main.py
src/cog/: botevents.py  botlist.py  commandchecks.py  errorhandler.py  guild_bans.py
src/commands/: caption.py  conversion.py  debug.py  image.py  media.py  other.py
src/core/: clogs.py  database.py  heartbeat.py  process.py  queue.py  v2queue.py
src/processing/: common.py  ffmpeg.py  ffprobe.py  other.py  sus.py  vips.py
src/processing/ffmpeg/: caption.py  conversion.py  creation.py  ensuresize.py  ffprobe.py  ffutils.py  other.py
src/processing/vips/: caption.py  creation.py  other.py  vipsutils.py
src/utils/: common.py  discordmisc.py  dpy.py  scandiscord.py  tempfiles.py  web.py
tts/: mimic
