[tool.poetry]
name = "mediaforge"
version = "2.0.0"
description = "A Discord bot for editing and creating videos, images, GIFs, and more!"
authors = ["reticivis"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = {version = "^2.0.1", extras = ["speed"]}
aiofiles = "^0.8.0"
humanize = "^4.3.0"
coloredlogs = "^15.0.1"
Pillow = "^9.0.0"
regex = "^2022.8.17"
aiosqlite = "^0.17.0"
psutil = "^5.9.1"
apng = "^0.3.4"
docstring-parser = "^0.14.1"
yt-dlp = "^2022.9.1"
emojis = "^0.6.0"
python-magic = { version = "^0.4.13", markers = "sys_platform != 'win32'" }
python-magic-win64 = { version = "^0.4.13", markers = "sys_platform == 'win32'" }
requests = "^2.28.1"
"discordlists.py" = "^1.1.1"


[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
