[tool.poetry]
name = "mediaforge"
version = "2.0.0"
description = "A Discord bot for editing and creating videos, images, GIFs, and more!"
authors = ["reticivis"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = { version = "^2.3.2", extras = ["speed"] }
aiofiles = "^23.2.1"
humanize = "^4.7.0"
coloredlogs = "^15.0.1"
Pillow = "^9.0.0"
regex = "^2023.8.8"
aiosqlite = "^0.19.0"
psutil = "^5.9.5"
apng = "^0.3.4"
docstring-parser = "^0.15"
yt-dlp = "^2023.3.4"
emojis = "^0.7.0"
python-magic = { version = "^0.4.13", markers = "sys_platform != 'win32'" }
python-magic-win64 = { version = "^0.4.13", markers = "sys_platform == 'win32'" }
requests = "^2.31.0"
"discordlists.py" = "^1.1.1"
pyvips = "^2.2.1"
tblib = "^2.0.0"


[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
